<?xml version="1.0"?>
<package format="2">
  <name>cyclops_bringup</name>
  <version>1.0.0</version>
  <description>The cyclops_bringup package, for commumicate with cyclops board</description>

  <maintainer email="wuttipat.cho@anman.co.th">Liew Wuttipat</maintainer>

  <license>BSD</license>

  <!-- <url type="website">https://docs.anman.co.th/</url> -->
  <url type="repository">https://github.com/AnmanTechnology/cyclops_ros</url>
  <url type="bugtracker">https://github.com/AnmanTechnology/cyclops_ros/issues</url>
  <!-- <url type="website">http://wiki.ros.org/cyclops_ros</url> -->

  <author email="wuttipat.cho@anman.co.th">Liew Wuttipat</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosserial_python</build_depend>
  <build_export_depend>rosserial_python</build_export_depend>
  <exec_depend>rosserial_python</exec_depend>

</package>
