<?xml version="1.0"?>
<package format="2">
  <name>cyclops_ros</name>
  <version>1.0.0</version>
  <description>cyclops_ros packages for working with Cyclops board</description>

  <maintainer email="wuttipat.cho@anman.co.th">Liew Wuttipat</maintainer>

  <license>BSD</license>

  <!-- <url type="website">https://docs.anman.co.th/</url> -->
  <url type="repository">https://github.com/AnmanTechnology/cyclops_ros</url>
  <url type="bugtracker">https://github.com/AnmanTechnology/cyclops_ros/issues</url>
  <!-- <url type="website">http://wiki.ros.org/cyclops_ros</url> -->

  <author email="wuttipat.cho@anman.co.th">Liew Wuttipat</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cyclops_bringup</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
